fix compatibility check