@@ -18,9 +18,9 @@
  */
 package org.apache.pinot.controller.helix.core.minion;
 
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableSet;
 import org.apache.helix.task.TaskPartitionState;
 import org.apache.pinot.common.metrics.ControllerMetrics;
 import org.apache.pinot.controller.ControllerConf;
@@ -58,9 +58,9 @@ public class TaskMetricsEmitterTest {
     PinotHelixResourceManager pinotHelixResourceManager = Mockito.mock(PinotHelixResourceManager.class);
     LeadControllerManager leadControllerManager = Mockito.mock(LeadControllerManager.class);
 
-    Mockito.when(_pinotHelixTaskResourceManager.getTaskMetadataLastUpdateTimeMs()).thenReturn(Map.of());
+    Mockito.when(_pinotHelixTaskResourceManager.getTaskMetadataLastUpdateTimeMs()).thenReturn(ImmutableMap.of());
     Mockito.when(leadControllerManager.isLeaderForTable("TaskMetricsEmitter")).thenReturn(true);
-    Mockito.when(pinotHelixResourceManager.getOnlineInstanceList()).thenReturn(List.of());
+    Mockito.when(pinotHelixResourceManager.getOnlineInstanceList()).thenReturn(ImmutableList.of());
 
     _taskMetricsEmitter = new TaskMetricsEmitter(pinotHelixResourceManager,
         _pinotHelixTaskResourceManager, leadControllerManager, new ControllerConf(), _controllerMetrics);
@@ -69,7 +69,7 @@ public class TaskMetricsEmitterTest {
   @Test
   public void noTaskTypeMetrics() {
     PinotMetricsRegistry metricsRegistry = _controllerMetrics.getMetricsRegistry();
-    Mockito.when(_pinotHelixTaskResourceManager.getTaskTypes()).thenReturn(Set.of());
+    Mockito.when(_pinotHelixTaskResourceManager.getTaskTypes()).thenReturn(ImmutableSet.of());
     _taskMetricsEmitter.runTask(null);
     Assert.assertEquals(metricsRegistry.allMetrics().size(), 1);
     Assert.assertTrue(metricsRegistry.allMetrics().containsKey(
@@ -80,29 +80,29 @@ public class TaskMetricsEmitterTest {
   public void taskType1ButNoInProgressTask() {
     PinotMetricsRegistry metricsRegistry = _controllerMetrics.getMetricsRegistry();
     String taskType = "taskType1";
-    Mockito.when(_pinotHelixTaskResourceManager.getTaskTypes()).thenReturn(Set.of(taskType));
-    Mockito.when(_pinotHelixTaskResourceManager.getTasksInProgress(taskType)).thenReturn(Set.of());
+    Mockito.when(_pinotHelixTaskResourceManager.getTaskTypes()).thenReturn(ImmutableSet.of(taskType));
+    Mockito.when(_pinotHelixTaskResourceManager.getTasksInProgress(taskType)).thenReturn(ImmutableSet.of());
     _taskMetricsEmitter.runTask(null);
 
     Assert.assertEquals(metricsRegistry.allMetrics().size(), 7);
     Assert.assertTrue(metricsRegistry.allMetrics().containsKey(
         new YammerMetricName(ControllerMetrics.class, "pinot.controller.onlineMinionInstances")));
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class, "pinot.controller.numMinionTasksInProgress.taskType1"))
         .getMetric()).value(), 0L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class, "pinot.controller.numMinionSubtasksRunning.taskType1"))
         .getMetric()).value(), 0L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class, "pinot.controller.numMinionSubtasksWaiting.taskType1"))
         .getMetric()).value(), 0L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class, "pinot.controller.numMinionSubtasksError.taskType1"))
         .getMetric()).value(), 0L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class, "pinot.controller.percentMinionSubtasksInQueue.taskType1"))
         .getMetric()).value(), 0L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class, "pinot.controller.percentMinionSubtasksInError.taskType1"))
         .getMetric()).value(), 0L);
   }
@@ -110,10 +110,11 @@ public class TaskMetricsEmitterTest {
   @Test
   public void oneSingleTaskTypeWithTwoTables() {
     String taskType = "taskType1";
-    Mockito.when(_pinotHelixTaskResourceManager.getTaskTypes()).thenReturn(Set.of(taskType));
+    Mockito.when(_pinotHelixTaskResourceManager.getTaskTypes()).thenReturn(ImmutableSet.of(taskType));
     String task11 = "task11";
     String task12 = "task12";
-    Mockito.when(_pinotHelixTaskResourceManager.getTasksInProgress(taskType)).thenReturn(Set.of(task11, task12));
+    Mockito.when(_pinotHelixTaskResourceManager.getTasksInProgress(taskType))
+        .thenReturn(ImmutableSet.of(task11, task12));
 
     String table1 = "table1_OFFLINE";
     String table2 = "table2_OFFLINE";
@@ -122,13 +123,13 @@ public class TaskMetricsEmitterTest {
     PinotHelixTaskResourceManager.TaskCount taskCount2 = new PinotHelixTaskResourceManager.TaskCount();
     taskCount2.addTaskState(TaskPartitionState.RUNNING);
     Mockito.when(_pinotHelixTaskResourceManager.getTableTaskCount(task11)).thenReturn(
-        Map.of(table1, taskCount1, table2, taskCount2));
+        ImmutableMap.of(table1, taskCount1, table2, taskCount2));
     taskCount1 = new PinotHelixTaskResourceManager.TaskCount();
     taskCount1.addTaskState(null);
     taskCount2 = new PinotHelixTaskResourceManager.TaskCount();
     taskCount2.addTaskState(TaskPartitionState.TASK_ERROR);
     Mockito.when(_pinotHelixTaskResourceManager.getTableTaskCount(task12)).thenReturn(
-        Map.of(table1, taskCount1, table2, taskCount2));
+        ImmutableMap.of(table1, taskCount1, table2, taskCount2));
 
     runAndAssertForTaskType1WithTwoTables();
   }
@@ -147,63 +148,63 @@ public class TaskMetricsEmitterTest {
 
     Assert.assertTrue(metricsRegistry.allMetrics().containsKey(
         new YammerMetricName(ControllerMetrics.class, "pinot.controller.onlineMinionInstances")));
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class, "pinot.controller.numMinionTasksInProgress.taskType1"))
         .getMetric()).value(), 2L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class, "pinot.controller.numMinionSubtasksRunning.taskType1"))
         .getMetric()).value(), 1L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class, "pinot.controller.numMinionSubtasksWaiting.taskType1"))
         .getMetric()).value(), 1L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class, "pinot.controller.numMinionSubtasksError.taskType1"))
         .getMetric()).value(), 1L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class, "pinot.controller.percentMinionSubtasksInQueue.taskType1"))
         .getMetric()).value(), 50L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class, "pinot.controller.percentMinionSubtasksInError.taskType1"))
         .getMetric()).value(), 25L);
 
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class,
                 "pinot.controller.numMinionSubtasksRunning.table1_OFFLINE.taskType1"))
         .getMetric()).value(), 0L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class,
                 "pinot.controller.numMinionSubtasksWaiting.table1_OFFLINE.taskType1"))
         .getMetric()).value(), 1L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class,
                 "pinot.controller.numMinionSubtasksError.table1_OFFLINE.taskType1"))
         .getMetric()).value(), 0L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class,
                 "pinot.controller.percentMinionSubtasksInQueue.table1_OFFLINE.taskType1"))
         .getMetric()).value(), 50L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class,
                 "pinot.controller.percentMinionSubtasksInError.table1_OFFLINE.taskType1"))
         .getMetric()).value(), 0L);
 
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class,
                 "pinot.controller.numMinionSubtasksRunning.table2_OFFLINE.taskType1"))
         .getMetric()).value(), 1L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class,
                 "pinot.controller.numMinionSubtasksWaiting.table2_OFFLINE.taskType1"))
         .getMetric()).value(), 0L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class,
                 "pinot.controller.numMinionSubtasksError.table2_OFFLINE.taskType1"))
         .getMetric()).value(), 1L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class,
                 "pinot.controller.percentMinionSubtasksInQueue.table2_OFFLINE.taskType1"))
         .getMetric()).value(), 50L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class,
                 "pinot.controller.percentMinionSubtasksInError.table2_OFFLINE.taskType1"))
         .getMetric()).value(), 50L);
@@ -215,15 +216,18 @@ public class TaskMetricsEmitterTest {
   }
 
   private void oneTaskTypeWithOneTable(String taskType, String taskName1, String taskName2, String tableName) {
-    Mockito.when(_pinotHelixTaskResourceManager.getTaskTypes()).thenReturn(Set.of(taskType));
-    Mockito.when(_pinotHelixTaskResourceManager.getTasksInProgress(taskType)).thenReturn(Set.of(taskName1, taskName2));
+    Mockito.when(_pinotHelixTaskResourceManager.getTaskTypes()).thenReturn(ImmutableSet.of(taskType));
+    Mockito.when(_pinotHelixTaskResourceManager.getTasksInProgress(taskType))
+        .thenReturn(ImmutableSet.of(taskName1, taskName2));
 
     PinotHelixTaskResourceManager.TaskCount taskCount = new PinotHelixTaskResourceManager.TaskCount();
     taskCount.addTaskState(TaskPartitionState.COMPLETED);
-    Mockito.when(_pinotHelixTaskResourceManager.getTableTaskCount(taskName1)).thenReturn(Map.of(tableName, taskCount));
+    Mockito.when(_pinotHelixTaskResourceManager.getTableTaskCount(taskName1))
+        .thenReturn(ImmutableMap.of(tableName, taskCount));
     taskCount = new PinotHelixTaskResourceManager.TaskCount();
     taskCount.addTaskState(null);
-    Mockito.when(_pinotHelixTaskResourceManager.getTableTaskCount(taskName2)).thenReturn(Map.of(tableName, taskCount));
+    Mockito.when(_pinotHelixTaskResourceManager.getTableTaskCount(taskName2))
+        .thenReturn(ImmutableMap.of(tableName, taskCount));
 
     PinotMetricsRegistry metricsRegistry = _controllerMetrics.getMetricsRegistry();
     _taskMetricsEmitter.runTask(null);
@@ -231,48 +235,48 @@ public class TaskMetricsEmitterTest {
 
     Assert.assertTrue(metricsRegistry.allMetrics().containsKey(
         new YammerMetricName(ControllerMetrics.class, "pinot.controller.onlineMinionInstances")));
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class,
                 String.format("pinot.controller.numMinionTasksInProgress.%s", taskType)))
         .getMetric()).value(), 2L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class,
                 String.format("pinot.controller.numMinionSubtasksRunning.%s", taskType)))
         .getMetric()).value(), 0L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class,
                 String.format("pinot.controller.numMinionSubtasksWaiting.%s", taskType)))
         .getMetric()).value(), 1L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class,
                 String.format("pinot.controller.numMinionSubtasksError.%s", taskType)))
         .getMetric()).value(), 0L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class,
                 String.format("pinot.controller.percentMinionSubtasksInQueue.%s", taskType)))
         .getMetric()).value(), 50L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class,
                 String.format("pinot.controller.percentMinionSubtasksInError.%s", taskType)))
         .getMetric()).value(), 0L);
 
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class,
                 String.format("pinot.controller.numMinionSubtasksRunning.%s.%s", tableName, taskType)))
         .getMetric()).value(), 0L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class,
                 String.format("pinot.controller.numMinionSubtasksWaiting.%s.%s", tableName, taskType)))
         .getMetric()).value(), 1L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class,
                 String.format("pinot.controller.numMinionSubtasksError.%s.%s", tableName, taskType)))
         .getMetric()).value(), 0L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class,
                 String.format("pinot.controller.percentMinionSubtasksInQueue.%s.%s", tableName, taskType)))
         .getMetric()).value(), 50L);
-    Assert.assertEquals(((YammerSettableGauge) metricsRegistry.allMetrics().get(
+    Assert.assertEquals(((YammerSettableGauge<?>) metricsRegistry.allMetrics().get(
             new YammerMetricName(ControllerMetrics.class,
                 String.format("pinot.controller.percentMinionSubtasksInError.%s.%s", tableName, taskType)))
         .getMetric()).value(), 0L);
